# open-ai-interview-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
interview_ai/: .env.example  cli.py  client.py  environments.py
tests/: test_cli.py
